<resources>
    <string name="app_name">Pocktel</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="scan_fragment_label">Scan file</string>
    <string name="result_fragment_label">Scan result</string>
    <string name="remove_text">🗑️</string>
    <string name="scanButton">Scan 🔎</string>
    <string name="file_resource_dialog_button">file</string>
    <string name="url_resource_dialog_button">url</string>
    <string name="sample_file_input_hint">sample file</string>
    <string name="loading_desc">Loading</string>
    <string name="choose_file_button_text">choose</string>
    <string name="rules_matched_title">Rules matched</string>
    <string name="hash_title">Hash</string>
    <string name="copy_button_text">copy</string>
    <!-- Strings used for messages -->
    <string name="errorDialogOk">OK</string>
    <string name="errorDialogTitle">Error</string>
    <string name="hashCopyToast">Hash copied to clipboard</string>
    <string name="vt_button_text">VT</string>
</resources>