<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ScanFragment">

    <Button
        android:id="@+id/chooseRuleFileButton"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:text="@string/file_resource_dialog_button"
        app:layout_constraintBottom_toBottomOf="@+id/rule_set_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rule_set_spinner" />

    <Button
        android:id="@+id/chooseRuleUrlButton"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:text="@string/url_resource_dialog_button"
        app:layout_constraintBottom_toBottomOf="@+id/chooseRuleFileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/chooseRuleFileButton"
        app:layout_constraintTop_toTopOf="@+id/chooseRuleFileButton" />

    <Button
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <EditText
        android:id="@+id/sampleFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/sample_file_input_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chooseFileButton"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154"
        android:autofillHints="TEST" />

    <Button
        android:id="@+id/chooseFileButton"
        android:layout_width="113dp"
        android:layout_height="45dp"
        android:text="@string/choose_file_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/sampleFileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sampleFileName"
        app:layout_constraintVertical_bias="0.23" />

    <Spinner
        android:id="@+id/rule_set_spinner"
        android:layout_width="219dp"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/scanButton"
        app:layout_constraintEnd_toStartOf="@+id/chooseRuleFileButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sampleFileName"
        app:layout_constraintTop_toBottomOf="@+id/sampleFileName"
        app:layout_constraintVertical_bias="0.338" />

    <ImageView
        android:id="@+id/loading_view"
        android:layout_width="226dp"
        android:layout_height="251dp"
        android:src="@drawable/loading_animation"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/loading_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>